Opacity did the trick  and solved the whole visible or hidden issue

--- a/5_JavaScript/2_Game/Letters/letters.css
+++ b/5_JavaScript/2_Game/Letters/letters.css
@@ -6,8 +6,7 @@ body { font-family: Arial, Helvetica, sans-serif; margin: 0; background: radial-
 .card { position: relative; height: 210px; width: 210px; transition: transform 1s; transform-style: preserve-3d; }
 .card-face { position: absolute; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;
     backface-visibility: hidden;}
-.hidden { visibility: hidden; }
-.visible { visibility: visible; }
+.opClass {  opacity: 0; filter:alpha(opacity=40);}
 .card-front { transform: rotateY(0); transition: transform 1s ease-in-out; transform-style: preserve-3d; }
 .card-back { transform: rotateY(0); transition: transform 1s ease-in-out; transform-style: preserve-3d; }
 @media (max-width: 600px) { .container { grid-template-columns: repeat(2, auto);}  }
